--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     repositories {
-        mavenCentral()
+        maven {//fix some of the 501 issues
+            name = "mavenCentral"
+            url = "https://repo1.maven.org/maven2/"
+        }
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
@@ -22,7 +25,7 @@ group= "twilightforest" // http://maven.apache.org/guides/mini/guide-naming-conv
 archivesBaseName = "twilightforest-1.7.10"
 
 minecraft {
-    version = "1.7.10-10.13.4.1558-1.7.10"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "eclipse"
 }
 
