Tree related business + renamed dev version to deobfs + Added Drops to magical trees + Fixed Ore Magnet breaking TileEntity Based Ores

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     repositories {
         maven {//fix some of the 501 issues
@@ -26,11 +27,14 @@ apply plugin: 'forge'
 idea.module.downloadJavadoc = true
 idea.module.downloadSources = true
 
-version = "2.3.8.3-dev"
+version = "2.3.8.4-dev"
+//noinspection GroovyUnusedAssignment
 group= "twilightforest" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+//noinspection GroovyUnusedAssignment
 archivesBaseName = "twilightforest-1.7.10"
-
+//noinspection GroovyUnusedAssignment
 sourceCompatibility = 1.8
+//noinspection GroovyUnusedAssignment
 targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
@@ -46,7 +50,7 @@ task sourceJar(type: Jar) {
 
 task devJar(type: Jar) {
     from sourceSets.main.output
-    classifier = 'dev'
+    classifier = 'deobf'
 }
 artifacts {
     archives devJar
@@ -58,7 +62,7 @@ dependencies {
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
     //compile "some.group:artifact:version"
-      
+
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
@@ -66,9 +70,9 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    
+
     compile files('libs/Thaumcraft-deobf-1.7.10-4.2.3.5.jar')
-    
+
 }
 
 processResources
@@ -80,11 +84,11 @@ processResources
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
+
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-        
+
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
