Temporarily pause CF publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ usesShadowedDependencies = false
 
 # The project's numeric ID on CurseForge. You can find this in the About Project box.
 # Leave this empty if you don't want to publish on CurseForge.
-curseForgeProjectId = 227639
+# curseForgeProjectId = 227639  # Paused, temporarily, until a way use a custom display name is added
 
 # The project's relations on CurseForge. You can use this to refer to other projects on CurseForge.
 # Syntax: type1:name1;type2:name2;...
