--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,5 +3,6 @@
 dependencies {
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {transitive = false}
 
-    runtimeOnly("com.github.GTNewHorizons:Baubles:1.0.1.16:dev")
+    // For Thaumcraft runtime
+    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:Baubles:1.0.1.16:dev")
 }
